--- a/example.env
+++ b/example.env
@@ -1,3 +1,4 @@
 NODE_ENV = development
 PORT = 5000
 MONGO_URI = mongodb+srv://<Mongo_USER>:<MONGO_PASSWORD>@cluster0.gvi8bk0.mongodb.net/commercebay?retryWrites=true&w=majority
+JWT_SECRET = ADD YOUR SECRET
