--- a/example.env
+++ b/example.env
@@ -2,3 +2,4 @@ NODE_ENV = development
 PORT = 5000
 MONGO_URI = mongodb+srv://<Mongo_USER>:<MONGO_PASSWORD>@cluster0.gvi8bk0.mongodb.net/commercebay?retryWrites=true&w=majority
 JWT_SECRET = ADD YOUR SECRET
+PAGINATION_LIMIT = 8
