--- a/example.env
+++ b/example.env
@@ -2,4 +2,5 @@ NODE_ENV = development
 PORT = 5000
 MONGO_URI = mongodb+srv://<Mongo_USER>:<MONGO_PASSWORD>@cluster0.gvi8bk0.mongodb.net/commercebay?retryWrites=true&w=majority
 JWT_SECRET = ADD YOUR SECRET
+PAYPAL_CLIENT_ID  = ADD YOUR PAYPAL CLIENT ID
 PAGINATION_LIMIT = 8
